- New setting that lets you texture swap healers specifically, optionally only when class stacking.
- New "Replace Healer Icon" setting. Turns Healer Icon into Healer Cross.
- New "Per Class" Static DR Icon setting. Aka show Blind icon on Rogue and Fear icon on Priest etc.
- New swipe animation settings: Disable & Reverse, for DR, Class Icon and Trinket/Racial.
- New Class Color Names setting
- Castbars now instantly hide on finished casts.
- Interrupt durations now take interrupt reduction auras into consideration.
- Now shows duration on auras that don't have durations implemented by default (Smoke Bomb, Earthen Wall, Barrier, etc)
- Hunter's Feign Death no longer shows up as dead but instead keeps the HP at what it was upon feigning and makes it slightly transparent.
- Title above testing frames can now also be dragged to move the frames.

1.2.1
- Fix typo in hiding default arena frames
- Fix Color Trinket setting sometimes going gray instead of its intended red color.

1.2.0
- Added Import/Export profile sharing system. Shares active profile.
- Added "Static DR Icons" setting to set specicifc icons for specific DRs instead of the dynamic ones.
- Added "Crop Icons" to Xaryu Layout.
- Fixed DR Text setting showing +1 DR
- Fixed crop icons test mode not working 100%
- Fix "Hide" after testing not hiding the Title+Drag Info text above frames

1.1.9
- Fixed some interrupt durations.

1.1.8
- Added some missing interrupts to interrupt list. Thank you to Moonfirebeam for reporting these.

1.1.7
- Added castbar icon position settings and "hide shield texture" setting. (Layout Settings -> Cast Bar)

1.1.6
- New individual DR size adjustment settings (Layout)
- New DR Text setting
- New Hide DR Swipe Animation setting
- Minor aura tweaks

1.1.5
- Add new layout "Pixelated".
- Add "Swap Trinket with Race for Human" setting.
- Add "Color Trinket" setting. Colors Trinket flat green when its available and red when its on cooldown.
- Few more aura tweaks.