@@ -11,6 +11,7 @@
 - New "Per Class" Static DR Icon setting. Aka show Blind icon on Rogue and Fear icon on Priest etc.
 - New swipe animation settings: Disable & Reverse, for DR, Class Icon and Trinket/Racial.
 - New Class Color Names setting
+- New "Skip Mystery Gray" setting that avoids coloring unseen units gray (pre-gates, stealthed)
 - Castbars now instantly hide on finished casts.
 - Interrupt durations now take interrupt reduction auras into consideration.
 - Now shows duration on auras that don't have durations implemented by default (Smoke Bomb, Earthen Wall, Barrier, etc)
